Dev Fix z-index problem with drop-down menus in IE7
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey_dev@9418 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/superfish.css
+++ b/admin/styles/default/superfish.css
@@ -23,6 +23,7 @@
 .sf-menu li {
 	float:			left;
 	position:		relative;
+    z-index: 100; /* TP - keep the dropdowns above tabbed content in IE7 */
 }
 .sf-menu a {
 	display:		block;
